frontend/style.css
:root {
	--id-color: #00A000;
	/* --background-color: #222222; */
	--background-color: #16161A;
	--text-color: #FFFFFF;
	--message-color: #FFFFFF10;
	--message-color-not-transparent: #303030;
	--button-color: #505050;
	--link-color: #FF006A;
	--pointed-color: #00A2FF;
	--selected-message-color: #FFFFFF20;
	--selected-backlink-color: #00D0FF;
	--code-background-color: #FFFFFF05;
	--code-comment-color: #FFFFFF30;
	/*please change this ugly color*/
	--inline-code-color: #D0FF00;
	--quote-color: var(--inline-code-color);
}

.low_profile {
	color: var(--message-color);
}

.spoiler {
	background-color: var(--message-color);
}

* {
	padding: 0;
	margin: 0;
}

.message_image {
	float: left;
	margin: 1em;
	width: 20em
}

.message_image_full {
	width: auto;
	zoom: 100%;
	display: initial;
	float: none;
}

p {
	display: inline;
}

#canvas {
	height: 400px;
	width: 400px;
	position: fixed;
	right: 0px;
	top: 0px;
}

#wrapper {
	height: 100%;
	width: 100%;
	background-color: var(--background-color);
	display: flex;
	flex-direction: column;
}

#post_container {
	flex: 0 1 auto;
	margin: 0.5em;
}

#container {
	/* height: calc(80%); */
	overflow-y: autohidden;
	overflow-x: hidden;
	flex: 1 1 auto;
}

.monospace {
	font-family: monospace;
}

.quote {
	color: var(--quote-color);
		font-family: monospace;
}

.inline_code {
	color: var(--inline-code-color);
	font-family: monospace;
	display: inline;
}

.post_link {
	color: var(--link-color);
	font-family: monospace;
	text-decoration: none;
}

.pointed_by {
	color: var(--pointed-color);
	font-family: monospace;
	text-decoration: none;
	/* margin-left: 1em; */
}

.post_id {
	font-family: monospace;
	color: var(--id-color);
	text-decoration: none;
}

.tripcode {
	color: var(--text-color);
	/* color: var(--selected-backlink-color); */
	font-family: monospace;
	display: inline;
	text-decoration: none;
	margin-right: 0.5em;
}

button {
	border: none;
	margin: 0.1em;
}

html,
body {
	height: 100%;
	background-color: var(--background-color);
}

h1,
h2,
h3,
h4,
h5,
textarea,
input,
button,
p,
.code {
	color: var(--text-color);
}

.text {
	color: var(--text-color);
}

h2 {
	margin: 0.2em;
}

button {
	/* margin: 0.2em; */
	padding: 0.1em;
	background-color: var(--button-color);
	border-radius: 0.15em;
}

textarea,
input {
	padding: 0.1em;
	border: none;
	background-color: var(--message-color);
	border-radius: 0.25em;
}

img {
	border-radius: 0.25em;
}


.code {
	background-color: var(--code-background-color);
	font-family: monospace;
	padding: 0.5em;
	overflow-x: auto;
}

.code pre * {
	display: inline-block;
}

.message {
	background-color: var(--message-color);
	border-radius: 0.25em;
	display: inline-block;
	padding: 1em;
	margin: 0.25em;
}


.message_header {
	display: inline-flex;
	flex-wrap: wrap;
}

.message_header > div {
	margin-left: 0.5em;
	margin-right: 0.5em;
}

.pointers_container {
	display: inline-flex;
	flex-wrap: wrap;
}

.pointers_container * {
	margin-left: 1em;
}

/* width */
::-webkit-scrollbar {
	width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
	background: var(--background-color);
}

/* Handle */
::-webkit-scrollbar-thumb {
	background: #888;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
	background: #555;
}


.message_preview_background {
	background-color: var(--background-color);
	margin: 0px;
	padding: 0px;
}

.message_preview {
	margin: 0px;
}

.selected {
	background-color: var(--selected-message-color);
}

.selected_backlink {
	color: var(--selected-backlink-color);	
}

@media only screen and (max-device-width: 1000px) {
	:root {
		--textarea-size: 80%;
	}

	#post_text {
		width: 100%;
		height: var(--textarea-size);

	}

	.big_node br {
		display: block;
	}

	.message {
		/* width: 100%; */
		border-radius: 0em;
		display: block;
		padding: 1em;
		margin: 0em;
		margin-bottom: 0.25em;

	}

	#container {
		width: 100%;
	}

	#post_send {
		width: 100%;

	}

	#wrapper {
		flex-direction: column-reverse;
	}

	.buttons_holder {
		height: 100%;
		display: flex;
		flex-direction: row;
	}

	.buttons_holder>button {
		height: calc(100% - var(--textarea-size));
	}

	.code>pre>* {
		font-size: 2vw;
	}

	.code>pre {
		font-size: 2vw;
	}
	.message_image {
		width: 20em;
		zoom: 100%;
		display: initial;
		float: none;
	}

	.message_image_full {
		width: auto;
		zoom: 100%;
		display: initial;
	}

}


/* syntax highlighting     */
/*
Monokai style - ported by Luigi Maselli - http://grigio.org
*/

.hljs {
	display: block;
	overflow-x: auto;
	padding: 0.5em;
	background: var(--message-color);
	color: var(--text-color);
}

.hljs-tag,
.hljs-keyword,
.hljs-selector-tag,
.hljs-literal,
.hljs-strong,
.hljs-name {
	color: var(--link-color);
}

.hljs-code {
	color: #66d9ef;
}

.hljs-class .hljs-title {
	color: white;
}

.hljs-number {
	color: var(--pointed-color);
	/* color: #2996fd; */
}

.hljs-attribute,
.hljs-symbol,
.hljs-regexp,
.hljs-link {
	color: #bf79db;
}

.hljs-string {
	color: var(--selected-message-color);
}



.hljs-bullet,
.hljs-subst,
.hljs-title,
.hljs-section,
.hljs-emphasis,
.hljs-type,
.hljs-built_in,
.hljs-builtin-name,
.hljs-selector-attr,
.hljs-selector-pseudo,
.hljs-addition,
.hljs-variable,
.hljs-template-tag,
.hljs-template-variable {
	color: var(--inline-code-color);
}

.hljs-comment,
.hljs-quote,
.hljs-deletion,
.hljs-meta {
	color: var(--code-comment-color);
}

.hljs-keyword,
.hljs-selector-tag,
.hljs-literal,
.hljs-doctag,
.hljs-title,
.hljs-section,
.hljs-type,
.hljs-selector-id {
	font-weight: bold;
}

